--- a/e_commerce_project/appsettings.json
+++ b/e_commerce_project/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+
+    "DB": "Server=DESKTOP-PEPN09L\\SQLEXPRESS;Database=ILK;Trusted_Connection=True;TrustServerCertificate=True"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
